<resources>
    <string name="app_name">BookShop_Admin</string>
    <string name="textLogin">Quản lý BookShop!</string>
    <string name="hintEmail">Enter your email</string>
    <string name="hintPassword">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="btnlogin">Đăng nhập</string>
    <string name="unauthorized">Ứng dụng chỉ dành cho quản lý!</string>
    <string name="book_management">Sản phẩm</string>
    <string name="user_management">Khách hàng</string>
    <string name="order_management">Đơn hàng</string>
    <string name="active">Đang hoạt động</string>
    <string name="inactive">Đã bị khóa</string>
    <string name="search_bar">Tìm kiếm</string>
    <string name="add_book">Thêm sách</string>
    <string name="update_book">Cập nhật sản phẩm</string>
    <string name="update">Cập nhật</string>
    <string name="book_name">Tên sách</string>
    <string name="book_description">Mô tả sách</string>
    <string name="book_quantity">Số lượng sách</string>
    <string name="book_price">Đơn giá</string>
    <string name="book_discountedprice">Đơn giá khuyến mại</string>
    <string name="book_author">Chọn tác giả</string>
    <string name="add_author">Thêm tác giả</string>
    <string name="add_category">Thêm thể loại</string>
    <string name="book_supplier">Nhà xuất bản</string>
    <string name="add_supplier">Thêm nhà xuất bản</string>
    <string name="enter_category_name">Nhập tên thể loại</string>
    <string name="enter_supplier_name">Nhập tên nhà xuất bản</string>
    <string name="enter_category_description">Nhập mô tả</string>
    <string name="book_category">Chọn thể loại</string>
    <string name="banner_selected">Chọn làm banner</string>
    <string name="quantity_remaining">Còn lại</string>
    <string name="messageExpiresIn">Phiên đăng nhập đã hết hạn. Bạn vui lòng đăng nhập lại để sử dụng!</string>
    <string name="orderInfo">Thông tin đơn hàng</string>
    <string name="product">Sản Phẩm</string>
    <string name="createdOn">Ngày đặt hàng :</string>
    <string name="receiverName">Tên người nhận :</string>
    <string name="receiverPhone">Số điện thoại :</string>
    <string name="orderAddress">Địa chỉ giao hàng :</string>
    <string name="orderQuantity">Tổng số lượng :</string>
    <string name="textStatus">Tình tạng đơn hàng:</string>
    <string name="textTotal">Tổng tiền:</string>
</resources>