<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/image_left_order"
        android:layout_width="34dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_left" />

    <TextView
        android:id="@+id/text_order_detail"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:text="@string/orderInfo"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_id_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@color/colorProduct"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/text_order_detail"
        app:layout_constraintStart_toStartOf="@+id/image_left_order"
        app:layout_constraintTop_toBottomOf="@+id/image_left_order" />

    <TextView
        android:id="@+id/text_pro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/product"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/text_id_order"
        app:layout_constraintStart_toStartOf="@+id/text_id_order"
        app:layout_constraintTop_toBottomOf="@+id/text_id_order" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_order_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/text_detail"
        app:layout_constraintEnd_toEndOf="@+id/text_id_order"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_id_order"
        app:layout_constraintTop_toBottomOf="@+id/text_pro"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Chi tiết"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_order_date"
        app:layout_constraintEnd_toEndOf="@+id/text_id_order"
        app:layout_constraintStart_toStartOf="@+id/recycler_order_detail" />

    <TextView
        android:id="@+id/text_order_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:text="@string/createdOn"
        android:textColor="@color/primary"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/text_receiver_name"
        app:layout_constraintEnd_toEndOf="@+id/text_id_order"
        app:layout_constraintStart_toStartOf="@+id/text_detail" />

    <TextView
        android:id="@+id/text_receiver_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:text="@string/receiverName"
        android:textColor="@color/primary"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/text_receiver_phone"
        app:layout_constraintEnd_toEndOf="@+id/text_id_order"
        app:layout_constraintStart_toStartOf="@+id/text_detail" />

    <TextView
        android:id="@+id/text_receiver_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:text="@string/receiverPhone"
        android:textColor="@color/primary"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/text_order_address"
        app:layout_constraintEnd_toEndOf="@+id/text_id_order"
        app:layout_constraintStart_toStartOf="@+id/text_detail" />

    <TextView
        android:id="@+id/text_order_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/orderAddress"
        android:textColor="@color/primary"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@id/text_order_sum"
        app:layout_constraintEnd_toEndOf="@id/text_order_date"
        app:layout_constraintStart_toStartOf="@id/text_order_date" />

    <TextView
        android:id="@+id/text_order_sum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/orderQuantity"
        android:textColor="@color/primary"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@id/text_payment_method"
        app:layout_constraintEnd_toEndOf="@+id/text_order_date"
        app:layout_constraintStart_toStartOf="@+id/text_order_address" />

    <TextView
        android:id="@+id/text_payment_method"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Phương thức thanh toán: "
        android:textColor="@color/primary"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@id/text_shipping_type"
        app:layout_constraintEnd_toEndOf="@+id/text_order_date"
        app:layout_constraintStart_toStartOf="@+id/text_order_sum" />

    <TextView
        android:id="@+id/text_shipping_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Phương thức vận chuyển: "
        android:textColor="@color/primary"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@id/text_status"
        app:layout_constraintEnd_toEndOf="@+id/text_order_date"
        app:layout_constraintStart_toStartOf="@+id/text_order_sum" />

    <TextView
        android:id="@+id/text_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/textStatus"
        android:textColor="@color/primary"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@id/text_total"
        app:layout_constraintStart_toStartOf="@+id/text_order_sum" />

    <TextView
        android:id="@+id/text_order_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:textColor="@color/status"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@id/text_total"
        app:layout_constraintEnd_toEndOf="@+id/text_order_date"
        app:layout_constraintStart_toEndOf="@+id/text_status" />

    <TextView
        android:id="@+id/text_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:text="@string/textTotal"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_total_money" />

    <TextView
        android:id="@+id/text_total_money"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:text="0VND"
        android:textColor="@color/red"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/text_order_detail"
        app:layout_constraintLeft_toRightOf="@id/text_total" />
</androidx.constraintlayout.widget.ConstraintLayout>