<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_add">

    <TextView
        android:id="@+id/text_alert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:text="@string/add_supplier"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="7dp"
        android:hint="@string/enter_supplier_name"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="@id/text_alert"
        app:layout_constraintStart_toStartOf="@id/text_alert"
        app:layout_constraintTop_toBottomOf="@id/text_alert" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:hint="@string/enter_category_description"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="@id/text_alert"
        app:layout_constraintStart_toStartOf="@id/text_alert"
        app:layout_constraintTop_toBottomOf="@id/edit_name" />

    <TextView
        android:id="@+id/text_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:padding="17dp"
        android:text="Hủy"
        android:textColor="@color/gray"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@id/text_confirm"
        app:layout_constraintTop_toBottomOf="@id/edit_description" />

    <TextView
        android:id="@+id/text_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:padding="17dp"
        android:text="Lưu"
        android:textColor="@color/red"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/edit_name"
        app:layout_constraintTop_toBottomOf="@id/edit_description" />
</androidx.constraintlayout.widget.ConstraintLayout>